--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "es5",
     "lib": [
       "es7",
-      "es2017"
+      "es2017.object"
     ],
     "declaration": true,
     "outDir": "./build"
